# property-testing-playground

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: pre-commit.yml  release-drafter.yml  tests.yml
src/: __init__.py  calculator.py  reverse.py  unfold.py
src/schema/: diff.py  schema.py
tests/: test_calculator.py  test_calculator_prop.py  test_reverse.py  test_reverse_prop.py  test_reverse_spec.py  test_unfold.py  test_unfold_prop.py
tests/schema/: test_schema_prop.py
