[project]
name = "property-testing-playground"
version = "0.1.0"
description = "Demonstrate property testing with other techniques like mutation testing"
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "hypothesis[cli]>=6.128.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]


[tool.mutmut]
paths_to_mutate = [ "src/reverse.py" ]
tests_dir = [ "tests/" ]
runner = "uv run pytest"
dict_synonyms = []
